tests/ui/parser/byte-string-literals-2.stderr
error[E0766]: unterminated double quote byte string
  --> $DIR/byte-string-literals-2.rs:2:6
   |
LL |       b"a
   |  ______^
LL | | }
   | |__^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0766`.
