tests/ui/parser/byte-string-literals-2.rs
pub fn main() {
    b"a  //~ ERROR unterminated double quote byte string
}
